crates/pcb-test-utils/src/snapshots/pcb_test_utils__snapdir__assert_dir_snapshot_with@integration_test_cloned_repo.snap
---
source: crates/pcb-test-utils/src/snapdir.rs
expression: manifest
---
=== docs/guide.md
# Getting Started

Welcome to the guide.
=== hello.txt
Hello, snapshot!
