crates/pcb-test-utils/src/snapshots/pcb_test_utils__snapdir__assert_dir_snapshot_with@multi_branch_clones.snap
---
source: crates/pcb-test-utils/src/snapdir.rs
expression: manifest
---
=== cloned-main/version.txt
ref=main
version=2.0.0-dev
=== cloned-tag-v1.0.0/version.txt
ref=v1.0
version=1.0.0
=== cloned-v1.0/version.txt
ref=v1.0
version=1.0.0
=== cloned-v1.5/version.txt
ref=v1.5
version=1.5.0
